hphp/hack/test/typecheck/interface_async_method.php
<?hh

interface I1 {
  public async function gen(): Awaitable<void>;
}
